fixed webkit text-align

--- a/static/style.css
+++ b/static/style.css
@@ -79,8 +79,9 @@ a:hover {
   height: 100%;
   overflow: hidden;
 
-  font-size: 5vw;
+  font-size: 6vw;
   text-align: center;
+  text-align: -webkit-center;
   color: #666;
   display: flex;
   flex-direction: column;
@@ -96,7 +97,7 @@ a:hover {
 
 #update {
   font-family: Arial, sans-serif;
-  font-size: 1.3vw;
+  font-size: 1.5vw;
   color: #fff;
   text-shadow: 0 1px 2px #666;
   position: absolute;
